--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </nav>
 </div>
 
-<img src="img/hero.jpg" alt="">
 
-    <section>
-        <h2>Diseño y desarrollo WEB</h2>
+    <section class="hero">
+        <div class="contenido-hero">
+            <h2>Diseño y desarrollo WEB</h2>
         <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="52" height="52" viewBox="0 0 24 24" stroke-width="2" stroke="#ffec00" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <circle cx="12" cy="11" r="3" />
@@ -36,6 +36,9 @@
         <p>Tierra Del Fuego, Ushuaia</p>
 
         <a href="#"> Contactar</a>
+
+        </div>
+        
     </section>    
     
 
