--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sitio Freelancer</title>
+    <link rel="preload" href="css/normalize.css" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Krub:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css" as="style">
     <link rel="preload" href="styles.css" as="style">
@@ -28,11 +29,11 @@
     <section class="hero">
         <div class="contenido-hero">
             <h2>Diseño y desarrollo WEB</h2>
-        <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="52" height="52" viewBox="0 0 24 24" stroke-width="2" stroke="#ffec00" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="52" height="52" viewBox="0 0 24 24" stroke-width="2" stroke="#ffec00" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <circle cx="12" cy="11" r="3" />
             <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
-          </svg></p>
+          </svg>
         <p>Tierra Del Fuego, Ushuaia</p>
 
         <a href="#"> Contactar</a>
